discussion/kv_engine/155607/155607_rev5_discussion.txt
======================================================================================================================
DESCRIPTION:

Defrag control sleep

Change-Id: I78336b50a00955f243b264adba9d7cd6a73d964b

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2021-06-11 14:19:12.000000000
Message: 
Uploaded patch set 5.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-11 14:42:53.000000000
Message: 
Patch Set 5: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36775/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36775/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31426/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/defragmenter.cc:289:27:
error: no member named "getFragmentationPercD" in "cb::FragmentationStats"; did you mean "getFragmentationPerc"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31426/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9798/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10: error: "spdlog/logger.h" file not found [clang-diagnostic-error]
#include "spdlog/logger.h"
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/passive_stream.h:14:10: error: "spdlog/common.h" file not found [clang-diagnostic-error]
#include "spdlog/common.h"
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9798/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10:
error: "spdlog/logger.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9798/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19384/ : FAILURE

Compile error at [2021-06-11T14:39:47.767Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/defragmenter.cc:289:27:
error: no member named "getFragmentationPercD" in "cb::FragmentationStats"; did you mean "getFragmentationPerc"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19384/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10452/ : FAILURE

Compile error at [2021-06-11T14:23:40.880Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/defragmenter.cc:289:27:
error: no member named "getFragmentationPercD" in "cb::FragmentationStats"; did you mean "getFragmentationPerc"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10452/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11372/ : FAILURE

Compile error at [2021-06-11T14:38:45.319Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/defragmenter.cc:289:27:
error: ?const class cb::FragmentationStats? has no member named ?getFragmentationPercD?; did you mean ?getFragmentationPerc??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11372/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11798/ : FAILURE

Compile error at [2021-06-11T14:39:02.137Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/defragmenter.cc:289:27:
error: no member named "getFragmentationPercD" in "cb::FragmentationStats"; did you mean "getFragmentationPerc"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11798/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11521/ : FAILURE

Compile error at [2021-06-11T14:38:30.087Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/defragmenter.cc:289:27:
error: ?const class cb::FragmentationStats? has no member named ?getFragmentationPercD?; did you mean ?getFragmentationPerc??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11521/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8391/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/314/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
